ScratchAnalysis/gen/AntlrParser.py
# Generated from C:/Users/XIXI/Desktop/ScratchAnalysis\Antlr.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class AntlrParser ( Parser ):

    grammarFileName = "Antlr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "','", "'}'", "':'", "'true'", 
                     "'false'", "'null'", "'['", "']'", "'\"costumes\"'", 
                     "'\"sounds\"'", "'\"broadcasts\"'", "'\"blocks\"'", 
                     "'\"comments\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "STRING", "NUMBER", 
                      "WS" ]

    RULE_json = 0
    RULE_obj = 1
    RULE_pair = 2
    RULE_value = 3
    RULE_array = 4
    RULE_costumes = 5
    RULE_costume_content = 6
    RULE_sounds = 7
    RULE_sound_content = 8
    RULE_broadcasts = 9
    RULE_broadcast_content = 10
    RULE_blocks = 11
    RULE_block_content = 12
    RULE_comments = 13
    RULE_comment_content = 14

    ruleNames =  [ "json", "obj", "pair", "value", "array", "costumes", 
                   "costume_content", "sounds", "sound_content", "broadcasts", 
                   "broadcast_content", "blocks", "block_content", "comments", 
                   "comment_content" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    STRING=15
    NUMBER=16
    WS=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(AntlrParser.ValueContext,0)


        def getRuleIndex(self):
            return AntlrParser.RULE_json

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJson" ):
                listener.enterJson(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJson" ):
                listener.exitJson(self)




    def json(self):

        localctx = AntlrParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObjContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.PairContext)
            else:
                return self.getTypedRuleContext(AntlrParser.PairContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_obj

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj" ):
                listener.enterObj(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj" ):
                listener.exitObj(self)




    def obj(self):

        localctx = AntlrParser.ObjContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_obj)
        self._la = 0 # Token type
        try:
            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 32
                self.match(AntlrParser.T__0)
                self.state = 33
                self.pair()
                self.state = 38
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 34
                    self.match(AntlrParser.T__1)
                    self.state = 35
                    self.pair()
                    self.state = 40
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 41
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(AntlrParser.T__0)
                self.state = 44
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PairContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AntlrParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(AntlrParser.ValueContext,0)


        def costumes(self):
            return self.getTypedRuleContext(AntlrParser.CostumesContext,0)


        def sounds(self):
            return self.getTypedRuleContext(AntlrParser.SoundsContext,0)


        def broadcasts(self):
            return self.getTypedRuleContext(AntlrParser.BroadcastsContext,0)


        def blocks(self):
            return self.getTypedRuleContext(AntlrParser.BlocksContext,0)


        def comments(self):
            return self.getTypedRuleContext(AntlrParser.CommentsContext,0)


        def getRuleIndex(self):
            return AntlrParser.RULE_pair

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPair" ):
                listener.enterPair(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPair" ):
                listener.exitPair(self)




    def pair(self):

        localctx = AntlrParser.PairContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pair)
        try:
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AntlrParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(AntlrParser.STRING)
                self.state = 48
                self.match(AntlrParser.T__3)
                self.state = 49
                self.value()
                pass
            elif token in [AntlrParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 50
                self.costumes()
                pass
            elif token in [AntlrParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 51
                self.sounds()
                pass
            elif token in [AntlrParser.T__11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 52
                self.broadcasts()
                pass
            elif token in [AntlrParser.T__12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.blocks()
                pass
            elif token in [AntlrParser.T__13]:
                self.enterOuterAlt(localctx, 6)
                self.state = 54
                self.comments()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AntlrParser.STRING, 0)

        def NUMBER(self):
            return self.getToken(AntlrParser.NUMBER, 0)

        def obj(self):
            return self.getTypedRuleContext(AntlrParser.ObjContext,0)


        def array(self):
            return self.getTypedRuleContext(AntlrParser.ArrayContext,0)


        def getRuleIndex(self):
            return AntlrParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = AntlrParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 64
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AntlrParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.match(AntlrParser.STRING)
                pass
            elif token in [AntlrParser.NUMBER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.match(AntlrParser.NUMBER)
                pass
            elif token in [AntlrParser.T__0]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.obj()
                pass
            elif token in [AntlrParser.T__7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.array()
                pass
            elif token in [AntlrParser.T__4]:
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.match(AntlrParser.T__4)
                pass
            elif token in [AntlrParser.T__5]:
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.match(AntlrParser.T__5)
                pass
            elif token in [AntlrParser.T__6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 63
                self.match(AntlrParser.T__6)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.ValueContext)
            else:
                return self.getTypedRuleContext(AntlrParser.ValueContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_array

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)




    def array(self):

        localctx = AntlrParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(AntlrParser.T__7)
                self.state = 67
                self.value()
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 68
                    self.match(AntlrParser.T__1)
                    self.state = 69
                    self.value()
                    self.state = 74
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 75
                self.match(AntlrParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 77
                self.match(AntlrParser.T__7)
                self.state = 78
                self.match(AntlrParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CostumesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def costume_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.Costume_contentContext)
            else:
                return self.getTypedRuleContext(AntlrParser.Costume_contentContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_costumes

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCostumes" ):
                listener.enterCostumes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCostumes" ):
                listener.exitCostumes(self)




    def costumes(self):

        localctx = AntlrParser.CostumesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_costumes)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(AntlrParser.T__9)
                self.state = 82
                self.match(AntlrParser.T__3)
                self.state = 83
                self.match(AntlrParser.T__7)
                self.state = 84
                self.costume_content()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 85
                    self.match(AntlrParser.T__1)
                    self.state = 86
                    self.costume_content()
                    self.state = 91
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 92
                self.match(AntlrParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(AntlrParser.T__9)
                self.state = 95
                self.match(AntlrParser.T__3)
                self.state = 96
                self.match(AntlrParser.T__0)
                self.state = 97
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Costume_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.PairContext)
            else:
                return self.getTypedRuleContext(AntlrParser.PairContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_costume_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCostume_content" ):
                listener.enterCostume_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCostume_content" ):
                listener.exitCostume_content(self)




    def costume_content(self):

        localctx = AntlrParser.Costume_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_costume_content)
        self._la = 0 # Token type
        try:
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.match(AntlrParser.T__0)
                self.state = 101
                self.pair()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 102
                    self.match(AntlrParser.T__1)
                    self.state = 103
                    self.pair()
                    self.state = 108
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 109
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(AntlrParser.T__0)
                self.state = 112
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SoundsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sound_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.Sound_contentContext)
            else:
                return self.getTypedRuleContext(AntlrParser.Sound_contentContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_sounds

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSounds" ):
                listener.enterSounds(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSounds" ):
                listener.exitSounds(self)




    def sounds(self):

        localctx = AntlrParser.SoundsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_sounds)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self.match(AntlrParser.T__10)
                self.state = 116
                self.match(AntlrParser.T__3)
                self.state = 117
                self.match(AntlrParser.T__7)
                self.state = 118
                self.sound_content()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 119
                    self.match(AntlrParser.T__1)
                    self.state = 120
                    self.sound_content()
                    self.state = 125
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 126
                self.match(AntlrParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(AntlrParser.T__10)
                self.state = 129
                self.match(AntlrParser.T__3)
                self.state = 130
                self.match(AntlrParser.T__0)
                self.state = 131
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Sound_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pair(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.PairContext)
            else:
                return self.getTypedRuleContext(AntlrParser.PairContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_sound_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSound_content" ):
                listener.enterSound_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSound_content" ):
                listener.exitSound_content(self)




    def sound_content(self):

        localctx = AntlrParser.Sound_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sound_content)
        self._la = 0 # Token type
        try:
            self.state = 147
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.match(AntlrParser.T__0)
                self.state = 135
                self.pair()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 136
                    self.match(AntlrParser.T__1)
                    self.state = 137
                    self.pair()
                    self.state = 142
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 143
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 145
                self.match(AntlrParser.T__0)
                self.state = 146
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BroadcastsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def broadcast_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.Broadcast_contentContext)
            else:
                return self.getTypedRuleContext(AntlrParser.Broadcast_contentContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_broadcasts

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBroadcasts" ):
                listener.enterBroadcasts(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBroadcasts" ):
                listener.exitBroadcasts(self)




    def broadcasts(self):

        localctx = AntlrParser.BroadcastsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_broadcasts)
        self._la = 0 # Token type
        try:
            self.state = 166
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 149
                self.match(AntlrParser.T__11)
                self.state = 150
                self.match(AntlrParser.T__3)
                self.state = 151
                self.match(AntlrParser.T__0)
                self.state = 152
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(AntlrParser.T__11)
                self.state = 154
                self.match(AntlrParser.T__3)
                self.state = 155
                self.match(AntlrParser.T__0)
                self.state = 156
                self.broadcast_content()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 157
                    self.match(AntlrParser.T__1)
                    self.state = 158
                    self.broadcast_content()
                    self.state = 163
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 164
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Broadcast_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AntlrParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(AntlrParser.ValueContext,0)


        def getRuleIndex(self):
            return AntlrParser.RULE_broadcast_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBroadcast_content" ):
                listener.enterBroadcast_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBroadcast_content" ):
                listener.exitBroadcast_content(self)




    def broadcast_content(self):

        localctx = AntlrParser.Broadcast_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_broadcast_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(AntlrParser.STRING)
            self.state = 169
            self.match(AntlrParser.T__3)
            self.state = 170
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlocksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.Block_contentContext)
            else:
                return self.getTypedRuleContext(AntlrParser.Block_contentContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_blocks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlocks" ):
                listener.enterBlocks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlocks" ):
                listener.exitBlocks(self)




    def blocks(self):

        localctx = AntlrParser.BlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_blocks)
        self._la = 0 # Token type
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 172
                self.match(AntlrParser.T__12)
                self.state = 173
                self.match(AntlrParser.T__3)
                self.state = 174
                self.match(AntlrParser.T__0)
                self.state = 175
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 176
                self.match(AntlrParser.T__12)
                self.state = 177
                self.match(AntlrParser.T__3)
                self.state = 178
                self.match(AntlrParser.T__0)
                self.state = 179
                self.block_content()
                self.state = 184
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 180
                    self.match(AntlrParser.T__1)
                    self.state = 181
                    self.block_content()
                    self.state = 186
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 187
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Block_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AntlrParser.STRING, 0)

        def value(self):
            return self.getTypedRuleContext(AntlrParser.ValueContext,0)


        def getRuleIndex(self):
            return AntlrParser.RULE_block_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_content" ):
                listener.enterBlock_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_content" ):
                listener.exitBlock_content(self)




    def block_content(self):

        localctx = AntlrParser.Block_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block_content)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 191
            self.match(AntlrParser.STRING)
            self.state = 192
            self.match(AntlrParser.T__3)
            self.state = 193
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CommentsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comment_content(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AntlrParser.Comment_contentContext)
            else:
                return self.getTypedRuleContext(AntlrParser.Comment_contentContext,i)


        def getRuleIndex(self):
            return AntlrParser.RULE_comments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComments" ):
                listener.enterComments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComments" ):
                listener.exitComments(self)




    def comments(self):

        localctx = AntlrParser.CommentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comments)
        self._la = 0 # Token type
        try:
            self.state = 212
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 195
                self.match(AntlrParser.T__13)
                self.state = 196
                self.match(AntlrParser.T__3)
                self.state = 197
                self.match(AntlrParser.T__0)
                self.state = 198
                self.match(AntlrParser.T__2)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.match(AntlrParser.T__13)
                self.state = 200
                self.match(AntlrParser.T__3)
                self.state = 201
                self.match(AntlrParser.T__0)
                self.state = 202
                self.comment_content()
                self.state = 207
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AntlrParser.T__1:
                    self.state = 203
                    self.match(AntlrParser.T__1)
                    self.state = 204
                    self.comment_content()
                    self.state = 209
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 210
                self.match(AntlrParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Comment_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
